Fix:overflow

--- a/Wikipedia.user.css
+++ b/Wikipedia.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia
 @namespace      stylish
-@version        1.2.4
+@version        1.2.5
 @homepageURL    https://github.com/haydenbroadhead/stylish
 @updateURL      https://raw.githubusercontent.com/haydenbroadhead/stylish/master/Wikipedia.user.css
 @description    Formats Wikipedia from being edge to edge
@@ -132,7 +132,8 @@
     .mw-parser-output > table.infobox:first-of-type tbody { 
       display: block;
       max-height: 80vh;
-      overflow:auto;
+      overflow-y:auto;
+      overflow-x: hidden;
     }
 
     .mw-parser-output > table.infobox:first-of-type tr { 
